# little-sorry

./: .gitignore  .gitlab-ci.yml  CHANGELOG.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  flake.nix  mise.toml
benches/: cfr_hot_path.rs  rps.rs
docs/superpowers/plans/: 2026-06-23-regret-read-api.md  2026-06-23-u16-stochastic-rounding.md
docs/superpowers/specs/: 2026-06-23-regret-read-api-design.md  2026-06-23-u16-stochastic-rounding-design.md
src/: batched_matcher.rs  cfr_plus.rs  dcfr.rs  dcfr_plus.rs  discount.rs  errors.rs  lane.rs  lib.rs  linear_cfr.rs  pcfr_plus.rs  pdcfr_plus.rs  probability.rs  quantize.rs  regret_matcher.rs  regret_minimizer.rs  rps.rs  rules.rs  scaled_int.rs  storage.rs  unit_fixed.rs  update_rule.rs  vector_ops.rs
tests/: batched_integration.rs  concurrent_layouts.rs  convergence.rs  convergence_layouts.rs
