[package]
name = "little-sorry"
version = "0.4.0"
authors = ["Elliott Clark <elliott@batteriesincl.com>"]
keywords = ["cards", "poker", "regret-minimization", "CFR"]
categories = ["games"]
homepage = "https://docs.rs/little_sorry"
repository = "https://github.com/elliottneilclark/little-sorry"
description = "Library to help with coding regret minimization."
license = "Apache-2.0"
edition = "2021"


[dependencies]
ndarray = "0.15.6"
rand = "0.8.5"
rand_distr = "0.4.3"
once_cell = "~1"
thiserror = "~1"

[dev-dependencies]
criterion = "0.5.1"

[[bench]]
name = "rps"
harness = false

[profile.release]
debug = true
lto = true
