[package]
name = "little-sorry"
version = "1.1.0"
authors = ["Elliott Clark <elliott@batteriesincl.com>"]
keywords = ["cards", "poker", "regret-minimization", "CFR"]
categories = ["games"]
homepage = "https://docs.rs/little_sorry"
repository = "https://github.com/elliottneilclark/little-sorry"
description = "Library to help with coding regret minimization."
license = "Apache-2.0"
edition = "2024"


[dependencies]
ndarray = "~0.16.1"
rand = "~0.9.0"
rand_distr = "~0.5.1"
thiserror = "~2"

[features]
default = []
rps = []

[dev-dependencies]
criterion = "0.5.1"

[[bin]]
required-features = ["rps"]
name = "run_rps"
path = "src/bin/run_rps.rs"

[[bench]]
name = "rps"
harness = false
required-features = ["rps"]

[profile.release]
debug = true
lto = true
