[package]
name = "little-sorry"
version = "2.0.0"
authors = ["Elliott Clark <elliott@batteriesincl.com>"]
keywords = ["cards", "poker", "regret-minimization", "CFR"]
categories = ["games"]
homepage = "https://docs.rs/little_sorry"
repository = "https://github.com/elliottneilclark/little-sorry"
description = "Library to help with coding regret minimization."
license = "Apache-2.0"
edition = "2024"


[dependencies]
rand = "~0.9.2"

[features]
default = []
rps = []

[dev-dependencies]
criterion = "0.8.2"

[[bin]]
required-features = ["rps"]
name = "run_rps"
path = "src/bin/run_rps.rs"

[[bin]]
required-features = ["rps"]
name = "compare_algorithms"
path = "src/bin/compare_algorithms.rs"

[[bench]]
name = "rps"
harness = false
required-features = ["rps"]

[[bench]]
name = "cfr_hot_path"
harness = false

[[test]]
name = "convergence"
required-features = ["rps"]

[package.metadata.release]
pre-release-replacements = [
  { file = "README.md", search = "little-sorry = \"[^\"]+\"", replace = "little-sorry = \"{{version}}\"" },
]

[profile.release]
debug = true
lto = true
